--- a/src/Components/Styles/NavBar.css
+++ b/src/Components/Styles/NavBar.css
@@ -5,7 +5,8 @@
 
 .toolbar {
     display: flex;
-    justify-content: space-between;
+    width: 100%;
+    justify-content: center;
 }
 
 .nav-item {
