--- a/src/Styles/TakePage.css
+++ b/src/Styles/TakePage.css
@@ -4,3 +4,8 @@
     padding-top: 2%;
     margin: auto;
 }
+.take-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
